<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!-- The whole page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Current Read out card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tempTile"
                android:layout_width="match_parent"
                android:layout_height="116dp"
                android:background="@drawable/layout_tile_rounded_corners"
                android:theme="@style/MainActivityBoxes"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/selectedCurrentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/clickedMetric"
                    android:theme="@style/labelThemeScroll"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/selectedSVG"
                    android:layout_width="71dp"
                    android:layout_height="88dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/thermometer_blue"  />

                <TextView
                    android:id="@+id/currentRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/NA"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <!-- The graph displaying past info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.anychart.AnyChartView
                    android:id="@+id/any_chart_view"
                    android:layout_width="match_parent"
                    android:layout_height="508dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="190dp"
                    android:layout_marginEnd="170dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <!-- The warning box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/warningsBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_tile_rounded_corners_red_border"
                android:theme="@style/MainActivityBoxes"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/warningTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:text="@string/warning"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <!--Additional info about current reading -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/additionalInfoBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_tile_rounded_corners_blue_border"
                android:theme="@style/MainActivityBoxes"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/additionalInfoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="5dp"
                    android:text="@string/additionalInfo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>